# AI-Disha

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  README_TEMPLATE_INTEGRATION.md  SYSTEM_SUMMARY.md  app.py  app_simple.py  architecture_diagram.md  clinician_dashboard.py  config.py  data_preprocessing.py  dataset_processor.py  demo.py  evaluation.py  explainability.py  feature_engineering.py  hybrid_inference.py  knowledge_base.py  knowledge_base.txt  main.py  ml_models.py  pyproject.toml  render.yaml  requirements.txt  run_dashboard.py  sample_patient_scenarios.py  setup.py  simple_demo.py  start_app.bat  start_app.py  start_localhost.bat  test_system.py  train_models.py  voice_assistant.py  web_server.py
template/meditex-final/: aboutus.html  blog-grid.html  blog-single-post.html  blog-with-sidebar.html  book-an-appoinment.html  care-listing.html  case-grid.html  case-masonry.html  checkout.html  contact.html  department-grid-3-column.html  department-grid-4-column.html  department-listing.html  department-with-icon.html  department-with-no-sidebar.html  department-with-sidebar.html  faqs.html  index-2.html  index-3.html  index-4.html  index-5.html  index.html  index04b9.html  our-doctors.html  product-details.html  shop-cart.html  shop.html  single-case.html  single-doctors.html  time-table.html
templates/: 404.html  500.html  about.html  base.html  contact.html  department.html  departments.html  doctor_dashboard.html  faq.html  index.html  risk_assessment.html  search_results.html
